Relevant coursework section updated.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         </p>
                         <h3 style="padding-top: 30px; padding-bottom: 10px;" id="grad_date">Expected graduation date: <i>May 13, 2023</i></h3>
                         <h3 style="padding-top: 10px; padding-bottom: 10px;" id="grad_date">Days left until expected graduation: <i id="num_days"></i></h3>
-                        <h3 style="padding-top: 5px; padding-bottom: 5px; font-size: 15px;">This section is automatically updated at 6 AM CDT each day until graduation approaches.</h3>
+                        <h3 style="padding-top: 5px; padding-bottom: 5px; font-size: 15px;">This section is automatically updated at 6 AM CT each day until graduation approaches.</h3>
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
@@ -98,14 +98,14 @@
                             <h1>Experience</h1>
                             <br>
                             <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%; float: right;">McAllen, TX</h3>
-                            <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="position">Customer Service Associate</h3>
-                            <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="date">June 2019 - July 2019</h4>
-                            <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="workplace"><i>Sky Park Trampoline Park</i></h4>
-                            <br>
-                            <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%; float: right;">McAllen, TX</h3>
                             <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="position">Maintenance/Sanitary Crew</h3>
                             <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="date">June 2022 - July 2022</h4>
                             <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="workplace"><i>Walgreens</i></h4>
+                            <br>
+                            <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%; float: right;">McAllen, TX</h3>
+                            <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="position">Customer Service Associate</h3>
+                            <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="date">June 2019 - July 2019</h4>
+                            <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="workplace"><i>Sky Park Trampoline Park</i></h4>
                         </div>
                     </div>
                     <div class = "software-projects" id="software">
@@ -140,33 +140,39 @@
                         <div id = "coursework-content">
                             <h1>Relevant Coursework</h1>
                             <br>
-                            <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;"><u>Courses being currently taken:</u></h3>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Algorithms and Data Structures</li>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Probability and Statistics for CE/EE Engineers</li>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Senior Design I</li>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Electronics I</li>
                             <br>
                             <br>
-                            <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;"><u>Completed Coursework (as of Summer 2022)</u></h3>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Computer Science I</li>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Computer Science II</li>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Computer Organization and Assembly Language</li>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Digital Systems Engineering I</li>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Digital Systems Engineering II</li>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Object-Oriented Programming in Java</li>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Software Engineering I</li>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Computer Networks</li>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Software Engineering II</li>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Systems Programming</li>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Electric Circuits I</li>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Computer Architecture</li>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Topics in Computer Science: Malware Detection</li>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Topics in Computer Science: Intro to Deep Learning</li>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Microcontroller and Embedded Systems</li>
+                            <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;"><u>Completed Coursework (as of Fall 2022)</u></h3>
+                            <i>
+                                <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Computer Science I</li>
+                                <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Computer Science II</li>
+                                <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Computer Organization and Assembly Language</li>
+                                <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Digital Systems Engineering I</li>
+                                <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Digital Systems Engineering II</li>
+                                <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Object-Oriented Programming in Java</li>
+                                <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Software Engineering I</li>
+                                <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Computer Networks</li>
+                                <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Software Engineering II</li>
+                                <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Systems Programming</li>
+                                <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Electric Circuits I</li>
+                                <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Computer Architecture</li>
+                                <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Topics in Computer Science: Malware Detection</li>
+                                <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Topics in Computer Science: Intro to Deep Learning</li>
+                                <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Electronics I</li>
+                                <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Algorithms and Data Structures</li>
+                                <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Senior Design I</li>
+                            </i>
                             <br>
                             <br>
                             <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;"><u>Upcoming Courses: Spring 2023</u></h3>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;"><i>This section will be updated after the Fall 2022 semester has officially concluded.</i></li>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">
+                                <i>
+                                    <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Operating Systems</li>
+                                    <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Differential Equations</li>
+                                    <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Database Design and Implementation</li>
+                                    <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Senior Design II</li>
+                                </i>
+                            </li>
                         </div>
                     </div>
                 </div>
