--- a/index.html
+++ b/index.html
@@ -54,14 +54,11 @@
                         </p>
                         <br>
                         <p style="font-weight: 500">
-                            You can download my resume by clicking <a id="download-link" href="Resume (Updated December 2022) - R_Arevalo.pdf" download>here.</a>
+                            You can download my resume by clicking <a id="download-link" href="Resume (Updated December 2022) - R_Arevalo (2).pdf" download>here.</a>
                         </p>
                         <h3 style="padding-top: 30px; padding-bottom: 10px;" id="grad_date">Expected graduation date: <i>May 13, 2023</i></h3>
                         <h3 style="padding-top: 10px; padding-bottom: 10px;" id="grad_date">Days left until expected graduation: <i id="num_days"></i></h3>
                         <h3 style="padding-top: 5px; padding-bottom: 5px; font-size: 15px;">This section is automatically updated at 6 AM CT each day until graduation approaches.</h3>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
                     </div>
                     <br>
                     <div class = "education" id="educate">
@@ -116,7 +113,7 @@
                         <div id = "software-content2">
                             <h4 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="programming-languages">Written in: Java</h4>
                             <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="project-title">SpaceShip Video Game</h3>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Designed a video game application as part of a project for a class in OOP for Java</li>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Designed a video game application as part of a project for a class in OOP for Java with my partner, Kevin Garcia.</li>
                             <br>
                             <br>
                             <hr>
@@ -124,7 +121,7 @@
                         <div id = "software-content3">
                             <h4 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="programming-languages">Written in: HTML | CSS | JavaScript</h4>
                             <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="project-title">CV (Curriculum Vitae) Website</h3>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Designed and implemented a single-page application for displaying a CV that can be read by recruiters</li>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Designed and implemented a single-page application for displaying a CV that can be read by recruiters.</li>
                             <br>
                             <br>
                             <hr>
@@ -133,7 +130,7 @@
                             <h4 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="programming-languages">Written in: React.js</h4>
                             <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="project-title">Personal Website</h3>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Designed and implemented a single-page application for displaying my works, whether they'd be web apps I designed 
-                            or other works connected to my personal hobbies, like photography</li>
+                            or other works connected to my personal hobbies, such as photography.</li>
                         </div>
                     </div>
                     <div class = "coursework" id="courses">
@@ -195,7 +192,6 @@
                 </div>
             </div>
         </footer>
-        <script src="https://kit.fontawesome.com/44cd3f986c.js" crossorigin="anonymous"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="nprogress-master/nprogress.js"></script>
         <script src="js/currentDate.js" type="text/javascript"></script>
