--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class = "nav-container">
                 <li>
                     <div id="logo">
-                        <h3><a href="https://rchrisarevalo.github.io/cv-website" target="_blank">Ruben C. Arevalo</a></h3>
+                        <h3><a href="https://rchrisarevalo.github.io/cv-website">Ruben C. Arevalo</a></h3>
                     </div>
                 </li>
                 <li id="button-task">
@@ -32,7 +32,7 @@
             <div class = "intro-section">
                 <div class = "row">
                     <div class = "profile-pic">
-                        <img src="images/September 2022 Profile Pic.jpg">
+                        <img src="images/February 2023 Profile Pic.jpg">
                     </div>
                     <div class = "introduction" id="intro">
                         <h1 style="padding-top: 20px; padding-bottom: 20px;">About the author</h1>
@@ -139,6 +139,18 @@
                             <br>
                             <br>
                             <br>
+                            <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;"><u>Current Courses</u></h3>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">
+                                <i>
+                                    <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Operating Systems</li>
+                                    <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Differential Equations</li>
+                                    <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Database Design and Implementation</li>
+                                    <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Senior Design II</li>
+                                </i>
+                            </li>
+                            <br>
+                            <br>
+                            <br>
                             <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;"><u>Completed Coursework (as of Fall 2022)</u></h3>
                             <i>
                                 <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Computer Science I</li>
@@ -160,16 +172,6 @@
                                 <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Senior Design I</li>
                             </i>
                             <br>
-                            <br>
-                            <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;"><u>Upcoming Courses: Spring 2023</u></h3>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">
-                                <i>
-                                    <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Operating Systems</li>
-                                    <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Differential Equations</li>
-                                    <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Database Design and Implementation</li>
-                                    <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Senior Design II</li>
-                                </i>
-                            </li>
                         </div>
                     </div>
                 </div>
