--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                     <div class = "introduction" id="intro">
                         <h1 style="padding-top: 20px; padding-bottom: 20px;">About the author</h1>
                         <p>
-                            Hi everyone! My name is Ruben Christopher Arevalo, and I am a fourth-year student attending the University of Texas-Rio Grande Valley. 
-                            I am currently pursuing my Bachelor's degree in computer engineering with my concentration focusing on software. 
+                            Hi everyone! My name is Ruben Christopher Arevalo, and I am a recent graduate from the University of Texas-Rio Grande Valley. 
+                            I pursued and earned my Bachelor's degree in computer engineering with my concentration focusing on software from August 2019 to May 2023.
                             Fun facts I want to share about myself are that I love to code, listen to music (preferrably lofi, classical, and pop), play video games, 
                             and watch movies and shows in my free time. Since I was a high school student, I always found the concept of programming intriguing, 
                             thinking about how much over a million (or a few) lines of code can change the world in so many ways. This led to me to develop a huge 
@@ -54,11 +54,8 @@
                         </p>
                         <br>
                         <p style="font-weight: 500">
-                            You can download my resume by clicking <a id="download-link" href="./Resume (Updated March 2023) - R_Arevalo (2).pdf" download>here.</a>
+                            You can download my resume by clicking <a id="download-link" href="./Resume (Updated May 2023) - R_Arevalo (2).pdf" download>here.</a>
                         </p>
-                        <h3 style="padding-top: 30px; padding-bottom: 10px;" id="grad_date">Expected graduation date: <i>May 12, 2023</i></h3>
-                        <h3 style="padding-top: 10px; padding-bottom: 10px;" id="grad_date">Days left until expected graduation: <i id="num_days"></i></h3>
-                        <h3 style="padding-top: 5px; padding-bottom: 5px; font-size: 15px;">This section is automatically updated at 6 AM CT each day until graduation approaches.</h3>
                     </div>
                     <br>
                     <div class = "education" id="educate">
@@ -67,14 +64,12 @@
                             <br>
                             <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%; float: right;" id="city">Edinburg, TX</h4>
                             <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="univ">University of Texas Rio Grande Valley</h3>
-                            <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="grad">Expected: May 2023</h3>
+                            <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="grad">Graduation on: May 2023</h3>
                             <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="degree"><i>B.S. in Computer Engineering</i></h4>
                             <br>
                             <h3 style="font-weight: 500; margin-left: 5%; margin-right: 5%;" id="org"><u>Organizations</u></h3>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Student Leadership Academy (2020-2021)</li>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Frontera Devs (2019-Present)</li>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Association for Computing Machinery (2019-2021)</li>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">National Society for Leadership and Success (2020-2021)</li>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Association for Computing Machinery (2019-2022)</li>
                         </div>
                         <div id = "content2">
                             <br>
@@ -93,6 +88,11 @@
                     <div class = "experience" id="exp">
                         <div id = "exp-content">
                             <h1>Experience</h1>
+                            <br>
+                            <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%; float: right;">McAllen, TX</h3>
+                            <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="position">Retail Salesperson</h3>
+                            <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="date">December 2022 - March 2023</h4>
+                            <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="workplace"><i>Walgreens</i></h4>
                             <br>
                             <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%; float: right;">McAllen, TX</h3>
                             <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="position">Maintenance/Sanitary Crew</h3>
@@ -139,19 +139,7 @@
                             <br>
                             <br>
                             <br>
-                            <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;"><u>Current Courses</u></h3>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">
-                                <i>
-                                    <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Operating Systems</li>
-                                    <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Differential Equations</li>
-                                    <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Database Design and Implementation</li>
-                                    <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Senior Design II</li>
-                                </i>
-                            </li>
-                            <br>
-                            <br>
-                            <br>
-                            <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;"><u>Completed Coursework (as of Fall 2022)</u></h3>
+                            <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;"><u>Completed Coursework (as of Spring 2023)</u></h3>
                             <i>
                                 <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Computer Science I</li>
                                 <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Computer Science II</li>
@@ -170,6 +158,9 @@
                                 <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Electronics I</li>
                                 <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Algorithms and Data Structures</li>
                                 <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Senior Design I</li>
+                                <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Operating Systems</li>
+                                <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Database Design and Implementation</li>
+                                <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Senior Design II</li>
                             </i>
                             <br>
                         </div>
