Changed website link and updated resume.

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
                         <br>
                         <p style="font-weight: 500;">
                             You can visit my personal website at:
-                            <a href="https://rchrisarevalo.github.io/personal-website" id="p-link" target="_blank">rchrisarevalo.github.io/personal-website</a>
+                            <a href="https://personal-website-0oqw.onrender.com/" id="p-link" target="_blank">personal-website-0oqw.onrender.com</a>
                         </p>
                         <br>
                         <p style="font-weight: 500">
-                            You can download my resume by clicking <a id="download-link" href="./Resume (Updated May 2023) - R_Arevalo.pdf" download>here.</a>
+                            You can download my resume by clicking <a id="download-link" href="./Resume (Updated September 2023) - R_Arevalo.pdf" download>here.</a>
                         </p>
                     </div>
                     <br>
