--- a/index.html
+++ b/index.html
@@ -111,9 +111,10 @@
                             <br>
                         </div>
                         <div id = "software-content2">
-                            <h4 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="programming-languages">Written in: Java</h4>
-                            <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="project-title">SpaceShip Video Game</h3>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Designed a video game application as part of a project for a class in OOP for Java with my partner, Kevin Garcia.</li>
+                            <h4 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="programming-languages">Written in: React.js</h4>
+                            <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="project-title">Personal Website</h3>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Designed and implemented a single-page application for displaying my works, whether they'd be web apps I designed 
+                            or other works connected to my personal hobbies, such as photography.</li>
                             <br>
                             <br>
                             <hr>
@@ -127,15 +128,14 @@
                             <hr>
                         </div>
                         <div id = "software-content4">
-                            <h4 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="programming-languages">Written in: React.js</h4>
-                            <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="project-title">Personal Website</h3>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Designed and implemented a single-page application for displaying my works, whether they'd be web apps I designed 
-                            or other works connected to my personal hobbies, such as photography.</li>
+                            <h4 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="programming-languages">Written in: Java</h4>
+                            <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="project-title">SpaceShip Video Game</h3>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Designed a video game application as part of a project for a class in OOP for Java with my partner, Kevin Garcia.</li>
                         </div>
                     </div>
                     <div class = "coursework" id="courses">
                         <div id = "coursework-content">
-                            <h1>Relevant Coursework</h1>
+                            <h1>Coursework</h1>
                             <br>
                             <br>
                             <br>
