--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         </p>
                         <br>
                         <p style="font-weight: 500">
-                            You can download my resume by clicking <a id="download-link" href="./Resume (Updated September 2023) - R_Arevalo.pdf" download>here.</a>
+                            You can download my resume by clicking <a id="download-link" href="./Resume (Updated October 2023) - R_Arevalo (1).pdf" download>here.</a>
                         </p>
                     </div>
                     <br>
