--- a/index.html
+++ b/index.html
@@ -85,6 +85,65 @@
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Intramural Soccer</li>
                         </div>
                     </div>
+                    <div class = "coursework" id="courses">
+                        <div id = "coursework-content">
+                            <h1>Relevant Coursework</h1>
+                            <br>
+                            <br>
+                            <b>
+                                <i>
+                                    <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Computer Science I</li>
+                                    <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Computer Science II</li>
+                                    <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Software Engineering I</li>
+                                    <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Software Engineering II</li>
+                                    <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Algorithms and Data Structures</li>
+                                    <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Database Design and Implementation</li>
+                                </i>
+                            </b>
+                            <br>
+                        </div>
+                    </div>
+                    <div class = "software-projects" id="software">
+                        <div id = "software-content1">
+                            <h1>Software Projects</h1>
+                            <br>
+                        </div>
+                        <div id = "software-content2">
+                            <h4 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="programming-languages">Written in: React.js | CSS | Python (Flask) | Express.js</h4>
+                            <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="project-title">Dating Web App</h3>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Currently designing a dating web app that will allow users to connect with one another based on their residence, age, 
+                                interests, etc.</li>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">
+                                Will consider designing and distributing to university students so that they can gain real-world experience
+                                as to how a relationship works during their time in school and after they graduate.
+                            </li>
+                            <br>
+                            <br>
+                            <hr>
+                        </div>
+                        <div id = "software-content3">
+                            <h4 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="programming-languages">Written in: React.js</h4>
+                            <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="project-title">Personal Website</h3>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Designed and implemented a single-page application for displaying my works, whether they'd be web apps I designed 
+                            or other works connected to my personal hobbies, such as photography.</li>
+                            <br>
+                            <br>
+                            <hr>
+                        </div>
+                        <div id = "software-content4">
+                            <h4 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="programming-languages">Written in: HTML | CSS | JavaScript</h4>
+                            <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="project-title">CV (Curriculum Vitae) Website</h3>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Designed and implemented a single-page application for displaying a CV that can be read by recruiters.</li>
+                            <br>
+                            <br>
+                            <hr>
+                        </div>
+                        <div id = "software-content5">
+                            <h4 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="programming-languages">Written in: Java</h4>
+                            <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="project-title">SpaceShip Video Game</h3>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Designed a video game application as part of a project for a class in OOP for Java with my partner, Kevin Garcia.</li>
+                        </div>
+                    </div>
                     <div class = "experience" id="exp">
                         <div id = "exp-content">
                             <h1>Experience</h1>
@@ -103,66 +162,6 @@
                             <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="position">Customer Service Associate</h3>
                             <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="date">June 2019 - July 2019</h4>
                             <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="workplace"><i>Sky Park Trampoline Park</i></h4>
-                        </div>
-                    </div>
-                    <div class = "software-projects" id="software">
-                        <div id = "software-content1">
-                            <h1>Software Projects</h1>
-                            <br>
-                        </div>
-                        <div id = "software-content2">
-                            <h4 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="programming-languages">Written in: React.js</h4>
-                            <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="project-title">Personal Website</h3>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Designed and implemented a single-page application for displaying my works, whether they'd be web apps I designed 
-                            or other works connected to my personal hobbies, such as photography.</li>
-                            <br>
-                            <br>
-                            <hr>
-                        </div>
-                        <div id = "software-content3">
-                            <h4 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="programming-languages">Written in: HTML | CSS | JavaScript</h4>
-                            <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="project-title">CV (Curriculum Vitae) Website</h3>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Designed and implemented a single-page application for displaying a CV that can be read by recruiters.</li>
-                            <br>
-                            <br>
-                            <hr>
-                        </div>
-                        <div id = "software-content4">
-                            <h4 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="programming-languages">Written in: Java</h4>
-                            <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="project-title">SpaceShip Video Game</h3>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Designed a video game application as part of a project for a class in OOP for Java with my partner, Kevin Garcia.</li>
-                        </div>
-                    </div>
-                    <div class = "coursework" id="courses">
-                        <div id = "coursework-content">
-                            <h1>Coursework</h1>
-                            <br>
-                            <br>
-                            <br>
-                            <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;"><u>Completed Coursework (as of Spring 2023)</u></h3>
-                            <i>
-                                <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Computer Science I</li>
-                                <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Computer Science II</li>
-                                <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Computer Organization and Assembly Language</li>
-                                <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Digital Systems Engineering I</li>
-                                <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Digital Systems Engineering II</li>
-                                <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Object-Oriented Programming in Java</li>
-                                <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Software Engineering I</li>
-                                <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Computer Networks</li>
-                                <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Software Engineering II</li>
-                                <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Systems Programming</li>
-                                <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Electric Circuits I</li>
-                                <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Computer Architecture</li>
-                                <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Topics in Computer Science: Malware Detection</li>
-                                <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Topics in Computer Science: Intro to Deep Learning</li>
-                                <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Electronics I</li>
-                                <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Algorithms and Data Structures</li>
-                                <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Senior Design I</li>
-                                <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Operating Systems</li>
-                                <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Database Design and Implementation</li>
-                                <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Senior Design II</li>
-                            </i>
-                            <br>
                         </div>
                     </div>
                 </div>
