Included new resume

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         </p>
                         <br>
                         <p style="font-weight: 500">
-                            You can download my resume by clicking <a id="download-link" href="./Resume (Updated December 2023) - R_Arevalo.pdf" download>here.</a>
+                            You can download my resume by clicking <a id="download-link" href="./Ruben Christopher Arevalo - Resume (Updated January 2024).pdf" download>here.</a>
                         </p>
                     </div>
                     <br>
