--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         </p>
                         <br>
                         <p style="font-weight: 500">
-                            You can download my resume by clicking <a id="download-link" href="./Ruben Christopher Arevalo - Resume (Updated January 2024).pdf" download>here.</a>
+                            You can download my resume by clicking <a id="download-link" href="./Ruben Christopher Arevalo - Resume (Updated March 2024).pdf" download>here.</a>
                         </p>
                     </div>
                     <br>
@@ -68,7 +68,7 @@
                             <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="degree"><i>B.S. in Computer Engineering</i></h4>
                             <br>
                             <h3 style="font-weight: 500; margin-left: 5%; margin-right: 5%;" id="org"><u>Organizations</u></h3>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Frontera Devs (2019-Present)</li>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Frontera Devs (2019-2023)</li>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Association for Computing Machinery (2019-2022)</li>
                         </div>
                         <div id = "content2">
