--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                             <br>
                         </div>
                         <div id = "software-content2">
-                            <h4 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="programming-languages">Written in: React.js | CSS | Python (Flask) | Express.js</h4>
+                            <h4 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="programming-languages">Written in: React.js | TypeScript | CSS | Python (Flask) | Express.js</h4>
                             <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="project-title">Dating Web App</h3>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Currently designing a dating web app that will allow users to connect with one another based on their residence, age, 
                                 interests, etc.</li>
