--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class = "intro-section">
                 <div class = "row">
                     <div class = "profile-pic">
-                        <img src="images/Profile Pic (December 2023).jpg">
+                        <img src="images/Profile Pic (January 2024).jpg" alt="profile-pic">
                     </div>
                     <div class = "introduction" id="intro">
                         <h1 style="padding-top: 20px; padding-bottom: 20px;">About the author</h1>
