Made changes to CV website.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class = "intro-section">
                 <div class = "row">
                     <div class = "profile-pic">
-                        <img src="images/Profile Pic (January 2024).jpg" alt="profile-pic">
+                        <img src="images/Profile Pic (April 2024).jpg" alt="profile-pic">
                     </div>
                     <div class = "introduction" id="intro">
                         <h1 style="padding-top: 20px; padding-bottom: 20px;">About the author</h1>
@@ -54,7 +54,7 @@
                         </p>
                         <br>
                         <p style="font-weight: 500">
-                            You can download my resume by clicking <a id="download-link" href="./Ruben Christopher Arevalo - Resume (Updated April 2024).pdf" download>here.</a>
+                            You can download my resume by clicking <a id="download-link" href="./Ruben Christopher Arevalo - Resume (Updated May 2024).pdf" download>here.</a>
                         </p>
                     </div>
                     <br>
@@ -63,22 +63,22 @@
                             <h1>Education</h1>
                             <br>
                             <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%; float: right;" id="city">Edinburg, TX</h4>
-                            <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="univ">University of Texas Rio Grande Valley</h3>
-                            <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="grad">Graduation on: May 2023</h3>
+                            <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="univ">University of Texas-Rio Grande Valley</h3>
+                            <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="grad">August 2019 - May 2023</h3>
                             <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="degree"><i>B.S. in Computer Engineering</i></h4>
                             <br>
                             <h3 style="font-weight: 500; margin-left: 5%; margin-right: 5%;" id="org"><u>Organizations</u></h3>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Frontera Devs (2019-2023)</li>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Association for Computing Machinery (2019-2022)</li>
                         </div>
-                        <div id = "content2">
+                        <div id = "content">
                             <br>
                             <hr>
                             <br>
                             <br>
                             <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%; float: right;" id="city">McAllen, TX</h4>
                             <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="college">South Texas College</h3>
-                            <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="grad">Graduation on: May 2019</h3>
+                            <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="grad">August 2015 - May 2019</h3>
                             <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="degree"><i>A.S. in Computer Science</i></h4>
                             <br>
                             <h3 style="font-weight: 500; margin-left: 5%; margin-right: 5%;" id="org"><u>Organizations</u></h3>
@@ -109,37 +109,36 @@
                             <br>
                         </div>
                         <div id = "software-content2">
-                            <h4 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="programming-languages">Written in: React.js | TypeScript | CSS | Python (Flask) | Express.js</h4>
+                            <h4 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="programming-languages">React.js | CSS | TypeScript | Python | FastAPI | Express.js | PostgreSQL </h4>
                             <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="project-title">Dating Web App</h3>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Currently designing a dating web app that will allow users to connect with one another based on their residence, age, 
-                                interests, etc.</li>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Started developing in June 2023, and is currently ongoing.</li>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">
-                                Will consider designing and distributing to university students so that they can gain real-world experience
-                                as to how a relationship works during their time in school and after they graduate.
+                                Aiming to create a future design where dating tips will be provided to newcomers and apply them properly, with an emphasis on
+                                self-esteem and establishing the foundation of a successful relationship.
                             </li>
                             <br>
                             <br>
                             <hr>
                         </div>
                         <div id = "software-content3">
-                            <h4 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="programming-languages">Written in: React.js</h4>
+                            <h4 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="programming-languages">React.js | CSS | Python | Flask</h4>
                             <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="project-title">Personal Website</h3>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Designed and implemented a single-page application for displaying my works, whether they'd be web apps I designed 
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Developed and implemented a website for displaying my works, whether they'd be web apps I designed 
                             or other works connected to my personal hobbies, such as photography.</li>
                             <br>
                             <br>
                             <hr>
                         </div>
                         <div id = "software-content4">
-                            <h4 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="programming-languages">Written in: HTML | CSS | JavaScript</h4>
+                            <h4 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="programming-languages">HTML | CSS</h4>
                             <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="project-title">CV (Curriculum Vitae) Website</h3>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Designed and implemented a single-page application for displaying a CV that can be read by recruiters.</li>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Developed and implemented a single-page website for displaying a CV that can be read by recruiters.</li>
                             <br>
                             <br>
                             <hr>
                         </div>
                         <div id = "software-content5">
-                            <h4 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="programming-languages">Written in: Java</h4>
+                            <h4 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="programming-languages">Java</h4>
                             <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="project-title">SpaceShip Video Game</h3>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Designed a video game application as part of a project for a class in OOP for Java with my partner, Kevin Garcia.</li>
                         </div>
@@ -186,7 +185,6 @@
         </footer>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="nprogress-master/nprogress.js"></script>
-        <script src="js/currentDate.js" type="text/javascript"></script>
         <script type="text/javascript">
             NProgress.configure({minimum: 0.1, showSpinner: false, easing: 'ease', speed: 600, trickleSpeed: 200});
             NProgress.start();
